--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,62 +1,20 @@
-.home {
-    width: 100%;
-    height: 100%;
+/* POKEMON LIST */
+
+
+
+.home .pokemon-list .pokemon-card .number p {
+    font-size: small;
+    padding-right: 10px;
+    margin: 0px;
+    color: #666666;
 }
 
-/* NAVBAR */
 
-.home .navbar {
-    padding-left: 10px;
-    display: flex;
-    gap: 16px;
-}
 
-.home .navbar .tittle {
-    color: white;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 32px;
-}
-
-/* SEARCHBAR */
-
-.home .searchbar {
-    padding-left: 10px;
-    display: flex;
-    gap: 16px;
-}
-
-.home .searchbar .bar {
-    width: 80%;
-    background-color: white;
-    border-radius: 16px;
-    padding: 8px 16px;
-    display: flex;
-    align-items: center;
-    gap: 16px;
-}
-
-.home .searchbar .bar input {
-    border: none;
-    outline: none;
-    flex-grow: 1;
-}
-
-.home .searchbar button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    outline: none;
-    border-radius: 16px;
-    padding: 8px;
-    width: 32px;
-    height: 32px;
-    transition: background-color 0.2s ease;
-}
-
-.home .searchbar button:hover,
-.home .searchbar button:active {
-    background-color: rgb(224, 222, 222);
-    cursor: pointer;
+.home .pokemon-list .pokemon-card .name p {
+    line-height: 16px;
+    font-size: 13px;
+    font-weight: 500;
+    margin: 0px;
+    padding-bottom: 5px;
 }
