--- a/src/components/organism/PokemonList/style.css
+++ b/src/components/organism/PokemonList/style.css
@@ -9,4 +9,5 @@
     border-radius: 8px;
     height: calc(93vh - 100px);
     box-shadow: 0px 1px 3px 1px #00000040 inset;
+    margin: 1rem .5rem;
 }
