--- a/src/components/organism/Search/style.css
+++ b/src/components/organism/Search/style.css
@@ -1,6 +1,5 @@
 .search{
-    padding-left: 10px;
+
     display: flex;
-    gap: 16px;
-    padding-bottom: 25px;
+    justify-content: space-around;
 }
