--- a/src/components/templates/Home/style.css
+++ b/src/components/templates/Home/style.css
@@ -4,4 +4,7 @@
     height: 100%;
     max-width: 100vw;
     max-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
