--- a/src/components/templates/PokemonDetails/style.css
+++ b/src/components/templates/PokemonDetails/style.css
@@ -3,12 +3,26 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 .detail-header {
     display: flex;
     padding: 1.5rem;
     justify-content: space-between;
 }
+/* .detail-header::before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    right: 0;
+    width: 70%;
+    height: 70%;
+    background-image: url('../../../assets/pokeball.svg');
+    opacity: 0.1;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+} */
 .detail-header-title {
     display: flex;
     align-items: center;
@@ -19,6 +33,10 @@
 .detail-header-nav {
     display: flex;
     align-items: center;
+}
+.detail-header-bg {
+    position: absolute;
+    right: 0;
 }
 .detail-header img#pokeball {
     opacity: 0.1;
@@ -32,7 +50,14 @@
     background-color: white;
     padding: 24px 12px 0px 12px;
     border-radius: 8px;
-    height: calc(93vh - 100px);
+    /* height: calc(93vh - 100px); */
+    height: 50%;
     box-shadow: 0px 1px 3px 1px #00000040 inset;
     margin: 1rem .5rem;
+    position: relative;
+}
+.detail-card img {
+    position: absolute;
+    top: -9rem;
+    left: 5rem;
 }
