--- a/src/components/templates/PokemonDetails/style.css
+++ b/src/components/templates/PokemonDetails/style.css
@@ -33,6 +33,7 @@
 .detail-header-nav {
     display: flex;
     align-items: center;
+    gap: 10px;
 }
 .detail-header-bg {
     position: absolute;
@@ -51,7 +52,7 @@
     padding: 24px 12px 0px 12px;
     border-radius: 8px;
     /* height: calc(93vh - 100px); */
-    height: 50%;
+    height: 65%;
     box-shadow: 0px 1px 3px 1px #00000040 inset;
     margin: 1rem .5rem;
     position: relative;
@@ -60,4 +61,27 @@
     position: absolute;
     top: -9rem;
     left: 5rem;
+}
+
+.first-detail-arrows{
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 10px;
+    z-index: 1000;
+    margin-bottom: 0;
+}
+.first-detail-arrows > div {
+    cursor: pointer;
+
+}
+.detail-arrows{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+    z-index: 1000;
+    margin-bottom: 0;
+}
+.detail-arrows > div {
+    cursor: pointer;
+
 }
